--- a/style.css
+++ b/style.css
@@ -3,23 +3,34 @@
   padding: 0;
 }
 
+body {
+  scroll-behavior: smooth;
+}
+
 .container {
   display: flex;
   border: 1px solid black;
   justify-content: center;
-  height: 100vh;
-  width: 100%;
+  height: 99vh;
+  width: 99%;
   align-items: center;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.9),
+    rgba(112, 112, 112, 0.5)
+  );
 }
 .Elements {
+  background-color: white;
   height: 150px;
-  width: 150px;
+  width: 200px;
   border: 1px solid black;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
 button {
+  margin: 20px;
   width: 30px;
 }
